Fix issue where sat and radar timestamp labels would stay hidden behind the map.
svn path=/; revision=5672

--- a/Systems/servers/raf-www/flight_data/css/osm.css
+++ b/Systems/servers/raf-www/flight_data/css/osm.css
@@ -8,6 +8,10 @@ body {
 
 #map { width: 100%; height: 100%; }
 
+div.olMapViewport {
+	z-index: 0;
+}
+
 #pform_label { font-size: 35px; padding-right:3px; }
 #pform_label_h { font-size: 35px; font-weight: bold; margin-right:3px; }
 #pformDialog { 
@@ -36,8 +40,8 @@ body {
 }
 #data td.w250 { width: 250px; }
 
-#debug div {width: 810px; height: 50px;}
-#debug img {float: left;}
+#sat_label div {width: 810px; height: 50px;}
+#sat_label img {float: left;}
 
 #menu span.menuLabel { 
 	display: none;
